--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -12,7 +12,7 @@ body{
     font-family: 'Poppins', sans-serif;
     width: 100vw;
     height: 100vh;
-    background-color: #BFB6A4;
+    background-color: #262221;
 }
 
 
@@ -26,7 +26,7 @@ body{
 /*=========Card========*/
 .card{
     max-width: 600px;
-    max-height: 800px;
+    max-height: 90%;
     margin: 0 auto;
 }
 
@@ -75,7 +75,110 @@ body{
 
 .card-body{
     height: 60%;
-    padding: 50px;
+    padding: 25px 55px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    background-color: #BFB6A4;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.box-city{
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn {
+    width: 15%;
+    padding: 5px 10px;
+    border-radius: 8px;
+    color: white;
+    background: linear-gradient(to right, #4B5936 50%, #262221 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all 300ms ease-out;
+}
+
+
+.btn:hover{
+    background-position: left bottom;
+}
+.btn i{
+    -webkit-animation: blink 0.6s infinite both;
+	animation: blink 0.6s infinite both;
+}
+
+@-webkit-keyframes blink {
+    0%,
+    50%,
+    100% {
+        opacity: 1;
+    }
+    25%,
+    75% {
+        opacity: 0;
+    }
+}
+@keyframes blink {
+    0%,
+    50%,
+    100% {
+        opacity: 1;
+    }
+    25%,
+    75% {
+        opacity: 0;
+    }
+}
+
+.biografia p{
+    text-align: justify;
+}
+.skills ul{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 5px;
+}
+
+.skills ul li{
+    padding: 5px;
+    width: auto;
+    border-radius: 8px;
+    font-weight: 600;
+}
+
+#html{
+    background-color: #F06429;
+}
+#css{
+    background-color: #264BE1;
+}
+#bootstrap{
+    background-color: #622EAD;
+}
+#javascript{
+    background-color: #F5DD1B;
+}
+#react{
+    background-color: #62E1FF;
+}
+#vetx{
+    background-color: #FD3164;
+}
+#postgresql{
+    background-color: #306091;
+}
+#mysql{
+    background-color: #E98D06;
+}
+#spring{
+    background-color: #61AA34;
+}
+#java{
+    background-color: #C62719;
+}
+#java i{
+    color: white;
 }
