--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -57,6 +57,13 @@ body{
     width: 100%;
     border-radius: 100%;
 }
+.box-header{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    column-gap: 15px;       
+}
 .title{
     color: white;
 }
@@ -181,4 +188,37 @@ body{
 }
 #java i{
     color: white;
+}
+
+
+@media (max-width: 600px){
+    .card{
+        max-height: 100%;
+    }
+    .card-head{
+        flex-direction: column;
+        text-align: center;
+        border-radius: none;
+    }
+    .box-header{
+        flex-direction: column;
+    }
+    .icons{
+        flex-direction: row;
+        column-gap: 10px;
+    }
+    .card-body{
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    .box-city{
+        flex-direction: column;
+    }
+    .location{
+        order: 1;
+    }
+    .curriculo{
+        margin: 0 auto;
+    }
 }
