--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -210,6 +210,7 @@ body{
     .card-body{
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        padding: 25px 30px;
     }
 
     .box-city{
